--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Snippy bot",
   "main": "index.js",
   "scripts": {
+    "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,6 +17,7 @@
   },
   "homepage": "https://github.com/PatrickSison/snippy-bot#readme",
   "dependencies": {
-    "discord.js": "^12.0.1"
+    "discord.js": "^12.0.1",
+    "lodash": "^4.17.15"
   }
 }
